--- a/Sierra/Views/BMEmployee/Index.cshtml
+++ b/Sierra/Views/BMEmployee/Index.cshtml
@@ -2,8 +2,7 @@
 
 <div class="bmemployee-index-login">
     <button type="submit" onclick="ShowElement()" class="bmemployee-index-login-button">Login</button>
-    <div class="bmemployee-index-identify"></div>
 </div>
 
 <script src="~/js/bmemployee/bmindex.js"></script>
-
+<script src="~/js/login/login.js"></script>
