--- a/Sierra/wwwroot/css/site.css
+++ b/Sierra/wwwroot/css/site.css
@@ -217,7 +217,7 @@ p{
     border: 2px solid rgb(248, 241, 241);
     color: rgb(248, 241, 241);
 }
-
+ /*Login*/
 .bmemployee-index-identify{
     display:grid;
 }
@@ -233,7 +233,7 @@ p{
     margin-top:24px;
 }
 
-.bmemployee-index-identify-button {
+#bmemployee-index-identify-button {
     background-color: transparent;
     width: 60px;
     height: 26px;
